--- a/GBriceCorp/pom.xml
+++ b/GBriceCorp/pom.xml
@@ -35,6 +35,11 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>angularjs</artifactId>
+    <version>1.4.4</version>
+</dependency>
 	</dependencies>
 
 
