redefinition de la methode rechercheconseiller et ajout utilisateur ajout des orderby et filtres

--- a/GBriceCorp/pom.xml
+++ b/GBriceCorp/pom.xml
@@ -49,7 +49,12 @@
 			<artifactId>gwt-angular-ngRoute</artifactId>
 			<version>0.1.2</version>
 		</dependency>
-
+<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+<dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>bootstrap</artifactId>
+    <version>3.3.5</version>
+</dependency>
 
 	</dependencies>
 
