--- a/GBriceCorp/pom.xml
+++ b/GBriceCorp/pom.xml
@@ -94,6 +94,13 @@
     <version>3.3.5</version>
 </dependency>
 
+<!-- Api mail -->
+ <dependency>
+ <groupId>javax.mail</groupId>
+ <artifactId>mail</artifactId>
+ <version>1.4.3</version>
+ </dependency>
+
 	</dependencies>
 
 
