--- a/GBriceCorp/pom.xml
+++ b/GBriceCorp/pom.xml
@@ -80,6 +80,12 @@
     <artifactId>angular-animate</artifactId>
     <version>1.5.8</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+<dependency>
+    <groupId>commons-fileupload</groupId>
+    <artifactId>commons-fileupload</artifactId>
+    <version>1.3.1</version>
+</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.asayama.gwt.angular/gwt-angular-ngRoute -->
 		<dependency>
