--- a/GBriceCorp/pom.xml
+++ b/GBriceCorp/pom.xml
@@ -107,6 +107,18 @@
  <version>1.4.3</version>
  </dependency>
 
+		<!-- Ajout des dependence apache common pour la gestion des upload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
 	</dependencies>
 
 
