--- a/GBriceCorp/pom.xml
+++ b/GBriceCorp/pom.xml
@@ -18,9 +18,20 @@
 	</properties>
 
 
-	
-	
+
+
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${springframework.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -36,7 +47,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.version}</version>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.3.Final</version>
@@ -46,7 +57,7 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${springframework.version}</version>
@@ -68,19 +79,19 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.webjars.bower/angular -->
 		<dependency>
-		    <groupId>org.webjars.bower</groupId>
-		    <artifactId>angular</artifactId>
-		    <version>1.5.8</version>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>angular</artifactId>
+			<version>1.5.8</version>
 		</dependency>
-		
-		
+
+
 		<!-- https://mvnrepository.com/artifact/org.webjars.bower/angular-animate -->
 		<dependency>
-		    <groupId>org.webjars.bower</groupId>
-		    <artifactId>angular-animate</artifactId>
-		    <version>1.5.8</version>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>angular-animate</artifactId>
+			<version>1.5.8</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/com.asayama.gwt.angular/gwt-angular-ngRoute -->
 		<dependency>
 			<groupId>com.asayama.gwt.angular</groupId>
@@ -89,17 +100,17 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
 		<dependency>
-		    <groupId>org.webjars</groupId>
-		    <artifactId>bootstrap</artifactId>
-		    <version>3.3.5</version>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.3.5</version>
 		</dependency>
-		
+
 		<!-- Api mail -->
-		 <dependency>
-		 <groupId>javax.mail</groupId>
-		 <artifactId>mail</artifactId>
-		 <version>1.4.3</version>
-		 </dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.3</version>
+		</dependency>
 
 		<!-- Ajout des dependence apache common pour la gestion des upload -->
 		<dependency>
@@ -107,12 +118,12 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		
+
 		<dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>1.1.0.Final</version>
-        </dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
 	</dependencies>
 
 
