--- a/GBriceCorp/pom.xml
+++ b/GBriceCorp/pom.xml
@@ -125,8 +125,6 @@
 			<version>1.1.0.Final</version>
 		</dependency>
 	</dependencies>
-
-
 	<build>
 		<plugins>
 			<plugin>
@@ -146,6 +144,14 @@
 					<warSourceDirectory>src/main/webapp</warSourceDirectory>
 					<warName>GestBank</warName>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
 		</plugins>
